# health-dashboard

./: .env.template  LICENSE  README.md  docker-compose.yaml  pyproject.toml
health_dashboard/: database.py  dependencies.py  main.py  settings.py
health_dashboard/controllers/: authcontroller.py
health_dashboard/models/: __init__.py  ingredient.py  meal.py  user.py  weight.py
health_dashboard/repositories/: baserepository.py  mealrepository.py  userrepository.py  weightrepository.py
health_dashboard/utils/: userutils.py
