[tool.poetry]
name = "health-dashboard"
version = "0.1.0"
description = "Personal Dashboard for Health releated things."
authors = ["Samuel Hufen <samuel@hufen.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
beanie = "^1.26.0"
pydantic-settings = "^2.4.0"
authlib = "^1.3.2"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
